# beets-gogdsync

./: .gitignore  MANIFEST.in  justfile  pyproject.toml  setup.py
.github/workflows/: createrelease.yml  pythonpublish.yml  testpythonpublish.yml
beets_gdplaylists.egg-info/: PKG-INFO  SOURCES.txt
beetsplug/: gogdplex.py
beetsplug/gdplaylists/: gdplex.py
beetsplug/gdplaylists/playlists/: 1970-10-24.yml  1977-05-04.yml  1978-01-31.yml  1978-02-01.yml  1984-04-19.yml  1990-07-19.yml
beetsplug/playlists/: 1971-10-24.yml  1971-11-20.yml  1971-12-09.yml  1971-12-10.yml  1972-09-03.yml  1972-09-09.yml  1972-09-19.yml  1972-10-17.yml  1972-10-18.yml  1972-10-19.yml  1973-06-22.yml  1973-06-24.yml  1973-06-26.yml  1973-10-29.yml  1973-10-30.yml  1974-05-17.yml  1974-05-19.yml  1974-05-21.yml  1977-05-03.yml  1977-05-04.yml  1977-10-01.yml  1977-10-02.yml  1979-12-04.yml  1979-12-09.yml  1985-04-27.yml  1985-04-28.yml
scripts/: mbdl.py  releases.yml
